--- a/sass/index/_features.scss
+++ b/sass/index/_features.scss
@@ -27,6 +27,11 @@
     margin-bottom: 30px;
 }
 
+.features__icon {
+    width: 70px;
+    height: 70px;
+}
+
 .features__title {
     font-weight: bold;
     font-size: 14px;
