--- a/css/main.css
+++ b/css/main.css
@@ -552,6 +552,11 @@ h1, h2, h3, h4, ul, p {
   margin-bottom: 30px;
 }
 
+.features__icon {
+  width: 70px;
+  height: 70px;
+}
+
 .features__title {
   font-weight: bold;
   font-size: 14px;
@@ -586,26 +591,24 @@ h1, h2, h3, h4, ul, p {
 }
 
 .case__cards {
-  --set-gap: 30px;
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
   -ms-flex-wrap: wrap;
       flex-wrap: wrap;
-  margin-left: calc(-1 * var(--set-gap));
-  margin-top: calc(-1 * var(--set-gap));
+  margin-top: -30px;
+  margin-left: -30px;
 }
 
 .case__item {
-  -ms-flex-preferred-size: calc(100%/ 3 - var(--set-gap));
-      flex-basis: calc(100%/ 3 - var(--set-gap));
-  margin-left: var(--set-gap);
-  margin-top: var(--set-gap);
+  -ms-flex-preferred-size: 370px;
+      flex-basis: 370px;
+  margin-left: 30px;
+  margin-top: 30px;
 }
 
 .case__thumb {
   position: relative;
-  height: 294px;
 }
 
 .case__img {
@@ -766,7 +769,7 @@ h1, h2, h3, h4, ul, p {
   margin-bottom: 50px;
 }
 
-.clients-list {
+.clients__list {
   --set-gap: 30px;
   display: -webkit-box;
   display: -ms-flexbox;
@@ -777,14 +780,14 @@ h1, h2, h3, h4, ul, p {
   margin-top: calc(-1 * var(--set-gap));
 }
 
-.clients-list__item {
+.clients__item {
   -ms-flex-preferred-size: calc(100%/6 - var(--set-gap));
       flex-basis: calc(100%/6 - var(--set-gap));
   margin-left: var(--set-gap);
   margin-top: 30px;
 }
 
-.clients-list__link {
+.clients__link {
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
@@ -803,17 +806,17 @@ h1, h2, h3, h4, ul, p {
   transition: fill 250ms cubic-bezier(0.4, 0, 0.2, 1), border 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
-.clients-list__link:hover, .clients-list__link:focus {
+.clients__link:hover, .clients__link:focus {
   fill: #2196F3;
   border: 1px solid #2196F3;
 }
 
-.clients-list__link:hover .clients-list__logo,
-.clients-list__link:focus .clients-list__logo {
+.clients__link:hover .clients-list__logo,
+.clients__link:focus .clients-list__logo {
   fill: #2196F3;
 }
 
-.clients-list__logo {
+.clients__logo {
   fill: #AFB1B8;
   -webkit-transition: fill 250ms cubic-bezier(0.4, 0, 0.2, 1), border 250ms cubic-bezier(0.4, 0, 0.2, 1);
   transition: fill 250ms cubic-bezier(0.4, 0, 0.2, 1), border 250ms cubic-bezier(0.4, 0, 0.2, 1);
