Footer, cases and header - finished

--- a/sass/portfolio/_grid.scss
+++ b/sass/portfolio/_grid.scss
@@ -124,5 +124,6 @@
     border-left: 1px solid #EEEEEE;
     border-right: 1px solid #EEEEEE;
     border-bottom: 1px solid #EEEEEE;
+    flex-grow: 1;
 }
 
