--- a/css/main.css
+++ b/css/main.css
@@ -479,6 +479,8 @@ h1, h2, h3, h4, ul, p {
   margin-left: auto;
   margin-top: 10px;
   margin-bottom: 10px;
+  background-color: transparent;
+  border: none;
 }
 
 .header__menu-button:hover, .header__menu-button:focus {
@@ -618,39 +620,55 @@ h1, h2, h3, h4, ul, p {
 }
 
 .features {
-  padding-top: 94px;
+  padding-top: 60px;
+  padding-bottom: 60px;
 }
 
-.features__cards {
-  --gep-set: 30px;
-  display: -webkit-box;
-  display: -ms-flexbox;
-  display: flex;
-  -ms-flex-wrap: wrap;
-      flex-wrap: wrap;
-  margin-left: -30px;
-  margin-top: calc(-1 * var(--set-gap));
+@media (min-width: 1200px) {
+  .features {
+    padding-top: 94px;
+    padding-bottom: 0;
+  }
 }
 
-.features__item {
-  -ms-flex-preferred-size: calc(100%/4 - var(--gep-set));
-      flex-basis: calc(100%/4 - var(--gep-set));
-  margin-left: var(--gep-set);
-  margin-top: var(--gep-set);
+@media (min-width: 768px) {
+  .features__cards {
+    margin: -15px;
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
+    -ms-flex-wrap: wrap;
+        flex-wrap: wrap;
+  }
+}
+
+@media (max-width: 787px) {
+  .features__item:not(:last-child) {
+    margin-bottom: 30px;
+  }
+}
+
+@media (min-width: 768px) {
+  .features__item {
+    width: calc((100% - 4 * 15px)/2);
+    margin: 15px;
+  }
 }
 
 .features__box {
   background: #F5F4FA;
   border-radius: 4px;
   height: 120px;
-  width: 270px;
-  padding: 25px 100px;
+  width: 100%;
+  padding: 25px 0;
   margin-bottom: 30px;
 }
 
 .features__icon {
   width: 70px;
   height: 70px;
+  display: block;
+  margin: auto;
 }
 
 .features__title {
@@ -660,6 +678,7 @@ h1, h2, h3, h4, ul, p {
   letter-spacing: 0.03em;
   text-transform: uppercase;
   color: #212121;
+  text-align: center;
   margin-bottom: 10px;
 }
 
@@ -671,64 +690,66 @@ h1, h2, h3, h4, ul, p {
   color: #757575;
 }
 
-.case {
-  padding-top: 94px;
-  padding-bottom: 94px;
+@media (max-width: 1199px) {
+  .case {
+    display: none;
+  }
 }
 
-.case__title {
-  font-weight: bold;
-  font-size: 36px;
-  line-height: 42px;
-  text-align: center;
-  letter-spacing: 0.03em;
-  color: #212121;
-  margin-bottom: 50px;
-}
-
-.case__cards {
-  display: -webkit-box;
-  display: -ms-flexbox;
-  display: flex;
-  -ms-flex-wrap: wrap;
-      flex-wrap: wrap;
-  margin-top: -30px;
-  margin-left: -30px;
-}
-
-.case__item {
-  -ms-flex-preferred-size: 370px;
-      flex-basis: 370px;
-  margin-left: 30px;
-  margin-top: 30px;
-}
-
-.case__thumb {
-  position: relative;
-}
-
-.case__img {
-  height: 100%;
-  width: 100%;
-  -o-object-fit: cover;
-     object-fit: cover;
-}
-
-.case__inscription {
-  position: absolute;
-  bottom: 0;
-  width: 100%;
-  height: 70px;
-  background: rgba(47, 48, 58, 0.8);
-  font-family: Roboto;
-  font-weight: bold;
-  font-size: 14px;
-  line-height: 16px;
-  text-align: center;
-  letter-spacing: 0.03em;
-  text-transform: uppercase;
-  color: #FFFFFF;
-  padding: 27px 0;
+@media (min-width: 1200px) {
+  .case {
+    padding-top: 94px;
+    padding-bottom: 94px;
+  }
+  .case__title {
+    font-weight: bold;
+    font-size: 36px;
+    line-height: 42px;
+    text-align: center;
+    letter-spacing: 0.03em;
+    color: #212121;
+    margin-bottom: 50px;
+  }
+  .case__cards {
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
+    -ms-flex-wrap: wrap;
+        flex-wrap: wrap;
+    margin-top: -30px;
+    margin-left: -30px;
+  }
+  .case__item {
+    -ms-flex-preferred-size: 370px;
+        flex-basis: 370px;
+    margin-left: 30px;
+    margin-top: 30px;
+  }
+  .case__thumb {
+    position: relative;
+  }
+  .case__img {
+    height: 100%;
+    width: 100%;
+    -o-object-fit: cover;
+       object-fit: cover;
+  }
+  .case__inscription {
+    position: absolute;
+    bottom: 0;
+    width: 100%;
+    height: 70px;
+    background: rgba(47, 48, 58, 0.8);
+    font-family: Roboto;
+    font-weight: bold;
+    font-size: 14px;
+    line-height: 16px;
+    text-align: center;
+    letter-spacing: 0.03em;
+    text-transform: uppercase;
+    color: #FFFFFF;
+    padding: 27px 0;
+  }
 }
 
 .team {
@@ -924,21 +945,81 @@ h1, h2, h3, h4, ul, p {
   padding-bottom: 60px;
 }
 
+@media (min-width: 768px) and (max-width: 1199px) {
+  .footer__container {
+    padding-left: 76px;
+    padding-right: 89px;
+  }
+}
+
+@media (min-width: 1200px) {
+  .footer__container {
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
+    -webkit-box-orient: horizontal;
+    -webkit-box-direction: normal;
+        -ms-flex-direction: row;
+            flex-direction: row;
+    -webkit-box-align: baseline;
+        -ms-flex-align: baseline;
+            align-items: baseline;
+  }
+}
+
+@media (max-width: 1199px) {
+  .footer__contact-info {
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
+    -webkit-box-orient: vertical;
+    -webkit-box-direction: normal;
+        -ms-flex-direction: column;
+            flex-direction: column;
+    -webkit-box-align: center;
+        -ms-flex-align: center;
+            align-items: center;
+    margin-bottom: 60px;
+  }
+}
+
+@media (min-width: 768px) {
+  .footer__contact-tablet {
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
+    -webkit-box-orient: horizontal;
+    -webkit-box-direction: normal;
+        -ms-flex-direction: row;
+            flex-direction: row;
+    -webkit-box-align: baseline;
+        -ms-flex-align: baseline;
+            align-items: baseline;
+  }
+}
+
 .footer__logo {
   text-decoration: none;
   font-family: Raleway;
   font-style: normal;
   font-weight: bold;
-  font-size: 26px;
-  line-height: 31px;
+  font-size: 24px;
+  line-height: 28px;
   letter-spacing: 0.03em;
   color: #2196F3;
-  display: block;
   margin-bottom: 20px;
 }
 
+@media (min-width: 1200px) {
+  .footer__logo {
+    display: block;
+    font-size: 26px;
+    line-height: 31px;
+  }
+}
+
 .footer__studio {
-  color: #FFFFFF;
+  color: #ffffff;
 }
 
 .footer__address, .footer__mail, .footer__tel {
@@ -949,34 +1030,81 @@ h1, h2, h3, h4, ul, p {
   font-size: 14px;
   line-height: 24px;
   letter-spacing: 0.03em;
-  display: block;
-  margin-bottom: 9px;
-  color: #FFFFFF;
+  color: #ffffff;
+  text-align: center;
+  margin-bottom: 8px;
+}
+
+@media (min-width: 1200px) {
+  .footer__address, .footer__mail, .footer__tel {
+    margin-bottom: 9px;
+    display: block;
+  }
 }
 
 .footer__mail, .footer__tel {
   color: rgba(255, 255, 255, 0.6);
 }
 
+@media (min-width: 1200px) {
+  .footer__mail, .footer__tel {
+    margin-bottom: 9px;
+    display: block;
+  }
+}
+
 .footer__tel {
   margin-bottom: 0;
 }
 
-.footer__container, .invitation {
+.footer__contacts {
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
-  -webkit-box-align: baseline;
-      -ms-flex-align: baseline;
-          align-items: baseline;
-}
-
-.invitation {
   -webkit-box-orient: vertical;
   -webkit-box-direction: normal;
       -ms-flex-direction: column;
           flex-direction: column;
-  margin-left: 70px;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+}
+
+@media (min-width: 1200px) {
+  .footer__contacts {
+    -webkit-box-align: start;
+        -ms-flex-align: start;
+            align-items: flex-start;
+  }
+}
+
+.invitation {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  margin-bottom: 60px;
+}
+
+@media (min-width: 768px) {
+  .invitation {
+    margin-left: auto;
+  }
+}
+
+@media (min-width: 1200px) {
+  .invitation {
+    margin-left: 70px;
+    -webkit-box-align: start;
+        -ms-flex-align: start;
+            align-items: flex-start;
+  }
 }
 
 .invitation__title, .subscription__title {
@@ -987,14 +1115,11 @@ h1, h2, h3, h4, ul, p {
   line-height: 16px;
   letter-spacing: 0.03em;
   text-transform: uppercase;
-  color: #FFFFFF;
+  color: #ffffff;
   margin-bottom: 20px;
 }
 
 .invitation__socials {
-  padding: 0;
-  margin: 0;
-  list-style: none;
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
@@ -1005,19 +1130,19 @@ h1, h2, h3, h4, ul, p {
 }
 
 .invitation__link {
-  display: -webkit-box;
-  display: -ms-flexbox;
-  display: flex;
-  -webkit-box-pack: center;
-      -ms-flex-pack: center;
-          justify-content: center;
-  -webkit-box-align: center;
-      -ms-flex-align: center;
-          align-items: center;
   width: 44px;
   height: 44px;
   border-radius: 50%;
-  fill: #FFFFFF;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+  fill: #ffffff;
   background: rgba(255, 255, 255, 0.1);
   -webkit-transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
   transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
@@ -1028,20 +1153,54 @@ h1, h2, h3, h4, ul, p {
 }
 
 .subscription {
-  margin-left: auto;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+}
+
+@media (min-width: 1200px) {
+  .subscription {
+    margin-left: auto;
+    -webkit-box-align: start;
+        -ms-flex-align: start;
+            align-items: flex-start;
+  }
 }
 
 .subscription__box {
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
   -webkit-box-align: center;
       -ms-flex-align: center;
           align-items: center;
 }
 
+@media (min-width: 1200px) {
+  .subscription__box {
+    -webkit-box-orient: horizontal;
+    -webkit-box-direction: normal;
+        -ms-flex-direction: row;
+            flex-direction: row;
+    -webkit-box-align: baseline;
+        -ms-flex-align: baseline;
+            align-items: baseline;
+  }
+}
+
 .subscription__input {
-  width: 358px;
+  max-width: 450px;
   height: 50px;
   font-family: Roboto;
   font-size: 16px;
@@ -1050,8 +1209,22 @@ h1, h2, h3, h4, ul, p {
   background: #2F303A;
   border: 1px solid;
   border-radius: 4px;
-  margin-right: 12px;
+  margin-bottom: 20px;
   padding: 15px 16px;
+}
+
+@media (min-width: 768px) {
+  .subscription__input {
+    width: 450px;
+  }
+}
+
+@media (min-width: 1200px) {
+  .subscription__input {
+    width: 358px;
+    margin-right: 12px;
+    margin-bottom: 0;
+  }
 }
 
 .subscribe-btn {
@@ -1066,7 +1239,7 @@ h1, h2, h3, h4, ul, p {
   line-height: 30px;
   letter-spacing: 0.06em;
   text-align: center;
-  color: #FFFFFF;
+  color: #ffffff;
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
@@ -1473,5 +1646,8 @@ h1, h2, h3, h4, ul, p {
   border-left: 1px solid #EEEEEE;
   border-right: 1px solid #EEEEEE;
   border-bottom: 1px solid #EEEEEE;
+  -webkit-box-flex: 1;
+      -ms-flex-positive: 1;
+          flex-grow: 1;
 }
 /*# sourceMappingURL=main.css.map */
