--- a/sass/general/_footer.scss
+++ b/sass/general/_footer.scss
@@ -1,156 +1,237 @@
 .footer {
-    background-color: getColor('background-dark');
-    padding-top: 60px;
-    padding-bottom: 60px;
-}
-
-.footer__logo {
-    text-decoration: none;
-    font-family: Raleway;
-    font-style: normal;
-    font-weight: bold;
-    font-size: 26px;
-    line-height: 31px;
-    letter-spacing: 0.03em;
-    color: getColor('accent');
-    
-    display: block;
-    margin-bottom: 20px;    
-}
-
-.footer__studio {
-    color: #FFFFFF;    
-}
-
-.footer__address {
-    text-decoration: none;
-    font-family: Roboto;
-    font-style: normal;
-    font-weight: normal;
-    font-size: 14px;
-    line-height: 24px;
-    letter-spacing: 0.03em;
-
-    display: block;
-    margin-bottom: 9px;
-
-    color: #FFFFFF;
-}
-
-.footer__mail {
-    @extend .footer__address;
-    color: getColor('secondary');
-}
-
-.footer__tel {
-    @extend .footer__mail;
-    margin-bottom: 0;
+  background-color: getColor("background-dark");
+  padding-top: 60px;
+  padding-bottom: 60px;  
 }
 
 .footer__container {
-    display: flex;
-    align-items: baseline;
+    @media (min-width:$tablet) and (max-width:1199px) {
+      padding-left: 76px;
+      padding-right: 89px;                    
+    }
+
+    @media (min-width:$desktop) {
+        display: flex;
+        flex-direction: row;
+        align-items: baseline;
+    }
 }
 
-.invitation{
-    @extend .footer__container;
-    flex-direction: column;
-    margin-left: 70px;    
+.footer__contact-info {
+    @media (max-width:1199px) {
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+        margin-bottom: 60px;
+    }    
 }
- 
+
+.footer__contact-tablet {
+    @media (min-width:$tablet) {
+        display: flex;
+        flex-direction: row;
+        align-items: baseline;
+    } 
+} 
+
+.footer__logo {
+  text-decoration: none;
+  font-family: Raleway;
+  font-style: normal;
+  font-weight: bold;
+  font-size: 24px;
+  line-height: 28px;
+  letter-spacing: 0.03em;
+  color: getColor("accent");
+
+  margin-bottom: 20px;
+  
+
+  @media (min-width:$desktop) {
+      display: block;
+      font-size: 26px;
+      line-height: 31px;
+    }
+}
+
+.footer__studio {
+  color: #ffffff;
+}
+
+.footer__address {
+  text-decoration: none;
+  font-family: Roboto;
+  font-style: normal;
+  font-weight: normal;
+  font-size: 14px;
+  line-height: 24px;
+  letter-spacing: 0.03em;
+  color: #ffffff;
+  text-align: center;
+  margin-bottom: 8px;
+
+  @media (min-width:$desktop) {
+      margin-bottom: 9px;
+      display: block;
+  }
+}
+
+.footer__mail {
+  @extend .footer__address;
+  color: getColor("secondary");
+
+  @media (min-width:$desktop) {
+      margin-bottom: 9px;
+      display: block;
+  }
+}
+
+.footer__tel {
+  @extend .footer__mail;
+  margin-bottom: 0;
+}
+
+.footer__contacts {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+
+  @media (min-width:$desktop) {
+        align-items: flex-start;
+  }
+}
+
+.invitation {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  margin-bottom: 60px;
+
+  @media (min-width:$tablet) {
+      margin-left: auto;
+  }
+
+  @media (min-width:$desktop) {
+      margin-left: 70px;
+      align-items: flex-start;
+  }
+}
+
 .invitation__title {
-    font-family: Roboto;
-    font-style: normal;
-    font-weight: bold;
-    font-size: 14px;
-    line-height: 16px;
-    letter-spacing: 0.03em;
-    text-transform: uppercase;
-    color: #FFFFFF;
+  font-family: Roboto;
+  font-style: normal;
+  font-weight: bold;
+  font-size: 14px;
+  line-height: 16px;
+  letter-spacing: 0.03em;
+  text-transform: uppercase;
+  color: #ffffff;
 
-    margin-bottom: 20px;
+  margin-bottom: 20px;
 }
 
 .invitation__socials {
-    padding: 0;
-    margin: 0;
-    list-style: none;
-    display: flex;
+  display: flex;
 }
-    
+
 .invitation__item:not(:last-child) {
-    margin-right: 10px;
+  margin-right: 10px;
 }
 
 .invitation__link {
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    width: 44px;
-    height: 44px;    
-    border-radius: 50%;
+  width: 44px;
+  height: 44px;
+  border-radius: 50%;
 
-    fill: #FFFFFF;
-    background: getColor('icons-dark');
-    transition: background-color $duration $cubic-bezier;
-   &:hover,
-   &:focus {
-    background-color: getColor('accent');
-   }
+  display: flex;
+  align-items: center;
+  justify-content: center;
+
+  fill: #ffffff;
+  background: getColor("icons-dark");
+  transition: background-color $duration $cubic-bezier;
+  &:hover,
+  &:focus {
+    background-color: getColor("accent");
+  }
 }
 
 .subscription {
-    margin-left: auto;    
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    
+    @media (min-width:$desktop) {
+        margin-left: auto;
+        align-items: flex-start;
+    }
 }
 
 .subscription__title {
-    @extend .invitation__title;
+  @extend .invitation__title;
 }
 
 .subscription__box {
-    display: flex;
-    align-items: center;    
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+
+  @media (min-width:$desktop) {
+        flex-direction: row;
+        align-items: baseline;
+    }
+  
 }
 
 .subscription__input {
-    width: 358px;
-    height: 50px;
-    font-family: Roboto;
-    font-size: 16px;
-    line-height: 20px;
-    color: getColor('secondary');
-    background: getColor('background-dark');
-    border: 1px solid getColor('icon-dark');
-    border-radius: 4px;
+  max-width: 450px;
+  height: 50px;
+  font-family: Roboto;
+  font-size: 16px;
+  line-height: 20px;
+  color: getColor("secondary");
+  background: getColor("background-dark");
+  border: 1px solid getColor("icon-dark");
+  border-radius: 4px;
 
-    margin-right: 12px;
-    padding: 15px 16px;
+  margin-bottom: 20px;
+  padding: 15px 16px;
+
+  @media (min-width:$tablet) {
+    width: 450px;
+  }
+
+  @media (min-width:$desktop) {
+      width: 358px;
+      margin-right: 12px;
+      margin-bottom: 0;
+  }
 }
 
 .subscribe-btn {
-    width: 200px;
-    height: 50px;
-    background-color: getColor('accent');
-    border-radius: 4px;
-    border: 0px;
-    
-    font-family: Roboto;
-    font-weight: bold;
-    font-size: 16px;
-    line-height: 30px;
-    letter-spacing: 0.06em;
-    text-align: center;     
-    color: #FFFFFF;
-    
-    display: flex;
-    align-items: center;
-    justify-content: center;
+  width: 200px;
+  height: 50px;
+  background-color: getColor("accent");
+  border-radius: 4px;
+  border: 0px;
+
+  font-family: Roboto;
+  font-weight: bold;
+  font-size: 16px;
+  line-height: 30px;
+  letter-spacing: 0.06em;
+  text-align: center;
+  color: #ffffff;
+
+  display: flex;
+  align-items: center;
+  justify-content: center;
 }
 
-.subscribe-btn__text{
-    margin-right: 10px;    
+.subscribe-btn__text {
+  margin-right: 10px;
 }
 
 .subscribe-btn__icon {
-    fill: currentColor;
-}
+  fill: currentColor;
+} 
