--- a/sass/general/_header.scss
+++ b/sass/general/_header.scss
@@ -119,6 +119,8 @@
     margin-left: auto;
     margin-top: 10px;
     margin-bottom: 10px;
+    background-color: transparent;
+    border: none;
 
     &:hover,
     &:focus {
