--- a/sass/index/_clients.scss
+++ b/sass/index/_clients.scss
@@ -1,40 +1,54 @@
 .clients {
-    padding-top: 94px;
-    padding-bottom: 94px;
+    padding-top: 60px;
+    padding-bottom: 60px;
+
+    @media (min-width:$tablet) {
+        padding-top: 94px;
+        padding-bottom: 94px;
+    }
 }
 
 .clients__title {
     font-weight: bold;
-    font-size: 36px;
-    line-height: 42px;
+    font-size: 28px;
+    line-height: 33px;
     text-align: center;
     letter-spacing: 0.03em;
     color: getColor('title-color');
 
-    margin-bottom: 50px;
+    margin-bottom: 30px;
+
+    @media (min-width:$desktop) {
+        font-size: 36px;
+        line-height: 42px;
+        
+        margin-bottom: 50px;
+    }
 }
 
 .clients__list{
-    --set-gap: 30px;
-
     display: flex;
     flex-wrap: wrap;
-    
-    margin-left: calc(-1 * var(--set-gap)); 
-    margin-top: calc(-1 * var(--set-gap));   
+    margin: -15px;  
 }
 
 .clients__item {
-    flex-basis: calc(100%/6 - var(--set-gap));
-    margin-left: var(--set-gap);
-    margin-top: 30px;    
+    width: calc((100% - 4 * 15px)/2);
+    margin: 15px;
+
+    @media (min-width:$tablet) {
+        width: calc((100% - 6 * 15px)/3);
+    }
+
+    @media (min-width:$desktop) {
+        width: calc((100% - 12 * 15px)/6);
+    }
 }
 
 .clients__link {
     display: flex;
     justify-content: center;
     align-items: center;
-    width: 170px;
     height: 90px;
     fill: getColor('icons-light');
     border: 1px solid getColor('icons-light');
@@ -47,9 +61,9 @@
         border: 1px solid getColor('accent');
     } 
     
-    &:hover .clients-list__logo,
-    &:focus .clients-list__logo{
-        fill: getColor('accent');       
+    &:hover .clients__logo,
+    &:focus .clients__logo{
+        fill: getColor('accent');     
     } 
 }
 
