--- a/sass/index/_features.scss
+++ b/sass/index/_features.scss
@@ -29,6 +29,11 @@
         margin: 15px;
     }
 
+    @media (min-width:$desktop){
+        width: calc((100% - 8 * 15px)/4);
+        margin: 15px;
+    }
+
 }
 
 .features__box {
@@ -57,6 +62,10 @@
     text-align: center;
 
     margin-bottom: 10px;
+
+    @media (min-width:$tablet) {
+        text-align: start;        
+    }
 }
 
 .features__desc {
