--- a/sass/portfolio/_grid copy.scss
+++ b/sass/portfolio/_grid copy.scss
@@ -1,33 +1,18 @@
 .portfolio__container {
-    padding-top: 60px;
-    padding-bottom: 60px;
-
-    @media (min-width:$desktop) {
-        padding-top: 94px;
-        padding-bottom: 94px;
-    }
+    padding-top: 94px;
+    padding-bottom: 94px;
 }
 
 .filter {
     display: flex;
-    flex-wrap: wrap;
+    justify-content: center;
     align-items: center;
     border-radius: 4px;
-    margin-bottom: 40px;
-    
-    @media (min-width:$tablet) {
-        justify-content: center;
-        margin-bottom: 30px;       
-    }
-
-    @media (min-width:$desktp) {
-        margin-bottom: 50px;       
-    }
+    margin-bottom: 50px;
 }
 
 .filter__item {
     margin-right: 8px;
-    margin-bottom: 15px;
 
     &:last-child {
        margin-right: 0; 
@@ -59,14 +44,16 @@
 .grid {
     display: flex;
     flex-wrap: wrap;
-    
-    @media (min-width:$tablet) {
-        margin: -15px;
-    }
+    padding: 0;
+    margin-top: -30px;
+    margin-left: -30px;
+    list-style: none;    
 }
 
 .grid__card {
-    width: 100%;
+    flex-basis: calc(100% / 3 - 30px);
+    margin-top: 30px;
+    margin-left: 30px;
     transition: box-shadow $duration $cubic-bezier;
     
     &:hover,
@@ -78,30 +65,18 @@
     &:hover .grid__overlay {
         transform: translateY(0);
     }
-
-    @media (max-width:767px) {
-        &:not(:last-child) {
-        margin-bottom: 30px;
-        }
-    }
-
-    @media (min-width:$tablet) {
-        width: calc((100% - 4 * 15px)/2);
-        margin: 15px;
-    }
-
-    @media (min-width:$desktop) {
-        width: calc((100% - 6 * 15px)/3);
-    }
 }
 
 .grid__thumb {
+    height: 294px;
     position: relative;
     overflow: hidden;
 }
 
 .grid__img {
+    display: block;
     width: 100%;
+    height: auto;
     object-fit: cover;
 }
 
@@ -130,24 +105,25 @@
     font-size: 18px;
     line-height: 36px;
     letter-spacing: 0.06em;
-    color: getColor('title-color');
+    color: var(--title-color);
+    
+    margin: 0px;
 }
-
 .grid__description {
     font-weight: normal;
     font-size: 16px;
     line-height: 30px;
     letter-spacing: 0.03em;
-    color: getColor('primary');
+    color: var(--text-color);
     
     margin-top: 4px;
 }
 
 .grid__content {
-    flex-grow: 1;
     padding: 20px 24px;
     border-left: 1px solid #EEEEEE;
     border-right: 1px solid #EEEEEE;
     border-bottom: 1px solid #EEEEEE;
+    flex-grow: 1;
 }
 
