--- a/sass/index/_team.scss
+++ b/sass/index/_team.scss
@@ -3,42 +3,74 @@
 }
 
 .team__container {
-    padding-top: 94px;
-    padding-bottom: 94px;
+    padding-top: 60px;
+    padding-bottom: 60px;
+
+    @media (min-width:$desktop){
+        padding-top: 94px;
+        padding-bottom: 94px;
+    }
 }
 
 .team__title {
     font-weight: bold;
-    font-size: 36px;
-    line-height: 42px;
+    font-size: 28px;
+    line-height: 33px;
     text-align: center;
     letter-spacing: 0.03em;
     color: getColor('title-color');
 
     margin-bottom: 50px;
+
+    @media (min-wids:$desktop){
+        font-size: 36px;
+        line-height: 42px;
+    }
 }
 
 .team__cards {
-    --set-gap: 30px;
+    @media (min-width:$tablet) {
+        display: flex;
+        flex-wrap: wrap;
 
-    display: flex;
-    flex-wrap: wrap;
-    
-    margin-left: -30px;
-    margin-top: calc(-1 * var(--set-gap));
+        margin-top: -30px;
+        margin-left: -30px;
+    }    
 }
 
-.team__item{
-    flex-basis: calc(100%/ 4 - var(--set-gap));
-    margin-left: var(--set-gap);
-    margin-top: 30px;
+.team__item {
     background-color: #FFFFFF;
     box-shadow: 0px 1px 3px rgba(0, 0, 0, 0.12), 0px 1px 1px rgba(0, 0, 0, 0.14), 0px 2px 1px rgba(0, 0, 0, 0.2);
     border-radius: 0px 0px 4px 4px;
+
+    @media (max-width:767px) {
+        &:not(:last-child) {
+            margin-bottom: 30px;
+        }
+    }
+    
+
+    @media (min-width:$tablet) {
+        width: calc(100%/2 - 30px);
+        margin-top: 30px;
+        margin-left: 30px;
+    }
+
+    @media (min-width:$desktop) {
+        flex-basis: calc(100%/ 4 - 30px);        
+    }
 }
 
 .team__thumb {
-    height: 260px;
+    height: 460px;
+
+    @media (min-width:$tablet) {
+        height: 374px;
+    }
+
+    @media (min-width:$desktop) {
+        height: 260px;
+    }
 }
 
 .team__img {
@@ -48,7 +80,15 @@
 }
 
 .team__desc {
-    padding: 30px 32px;
+    padding: 30px 122px 24px;
+
+    @media (min-width:$tablet) {
+        padding: 30px 74px 24px;
+    }
+
+    @media (min-width:$desktop) {
+        padding: 30px 32px;
+    }
 }
 
 .team__name {
@@ -80,10 +120,9 @@
     display: flex;    
 }
 
-.team__icon {
-    margin-right: 10px;
-    &:last-child {
-        margin-right: 0;
+.team__icon {    
+    &:not(:last-child) {
+        margin-right: 10px;
     }
 }
 
