--- a/sass/index/_modal.scss
+++ b/sass/index/_modal.scss
@@ -1,14 +1,15 @@
 .modal {
-    position: fixed;
-    top: 0;
-    left: 0;
-    width: 100%;
-    height: 100%;
-    background-color: rgba(0, 0, 0, 0.2);
-    border-radius: 4px;
-
-    opacity: 1;
-    transition: opacity $duration $cubic-bezier;
+  position: fixed;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  background-color: rgba(0, 0, 0, 0.2);
+  border-radius: 4px;
+  
+  
+  opacity: 1;
+  transition: opacity $duration $cubic-bezier;
 }
 
 .modal.is-hidden {
@@ -27,11 +28,16 @@
     transform: translate(-50%, -50%) scale(1);
     transition: transform $duration $cubic-bezier;
     
-    width: 528px;
-    height: 581px;
+    width: 450px;
+    height: 609px;
     border-radius: 4px;
     background-color: #ffffff;
     padding: 40px;
+
+    @media (min-width:$desktop) {
+        width: 528px;
+        height: 581px;
+    }
 }
 
 .close-button {
@@ -65,11 +71,15 @@
     font-family: Roboto;
     font-weight: bold;
     font-size: 20px;
-    line-height: 23px;
+    line-height: 30px;
     text-align: center;
     letter-spacing: 0.03em;
     color: getColor('title-color');
     margin-bottom: 12px;
+
+    @media (min-width:$desktop) {
+        line-height: 30px;
+    }
 }
 
 .signup-form__label {
@@ -78,7 +88,7 @@
 
     font-family: Roboto;
     font-size: 12px;
-    line-height: 14.06px;
+    line-height: 14px;
     letter-spacing: 0.01em;
     color: getColor('primary');
     margin-bottom: 10px;
@@ -105,11 +115,15 @@
 .data-input__place {
     border: 1px solid rgba(33, 33, 33, 0.2);
     border-radius: 4px;
-    width: 448px;
+    width: 370px;
     height: 40px;
     padding-left: 42px;
 
     transition: border $duration $cubic-bezier;
+
+    @media (min-width:$desktop) {
+        width: 448px;
+    }
 }
 
 .data-input__icon {
@@ -119,13 +133,12 @@
     left: 12px;
     
     transition: fill $duration $cubic-bezier;
-
 }
 
 .signup-form__textarea {
     border: 1px solid rgba(33, 33, 33, 0.2);
     border-radius: 4px;
-    width: 448px;
+    width: 370px;
     height: 120px;
     overflow : auto;
     resize : none;
@@ -144,6 +157,10 @@
        border: 1px solid getColor('accent');
        outline: none;
     }
+
+    @media (min-width:$desktop) {
+        width: 448px;
+    }
 }
 
 .conditions {
@@ -155,10 +172,15 @@
 
 .conditions__text {
     font-family: Roboto;
-    font-size: 14px;
-    line-height: 24px;
+    font-size: 12px;
+    line-height: 14px;
     letter-spacing: 0.03em;
-    color: getColor('primary');   
+    color: getColor('primary');
+    
+    @media (min-width:$desktop) {
+        font-size: 12px;
+        line-height: 24px;
+    }
 }
 
 .conditions__link {
