--- a/sass/portfolio/_grid.scss
+++ b/sass/portfolio/_grid.scss
@@ -20,7 +20,7 @@
         margin-bottom: 30px;       
     }
 
-    @media (min-width:$desktp) {
+    @media (min-width:$desktop) {
         margin-bottom: 50px;       
     }
 }
