--- a/css/main.css
+++ b/css/main.css
@@ -564,8 +564,6 @@ h1, h2, h3, h4, ul, p {
 }
 
 .hero {
-  background-image: -webkit-gradient(linear, left top, right top, from(rgba(47, 48, 58, 0.4)), to(rgba(47, 48, 58, 0.4))), url(../images/main/hero.jpg);
-  background-image: linear-gradient(to right, rgba(47, 48, 58, 0.4), rgba(47, 48, 58, 0.4)), url(../images/main/hero.jpg);
   background-color: #C4C4C4;
   background-repeat: no-repeat;
   background-position: center;
@@ -573,6 +571,13 @@ h1, h2, h3, h4, ul, p {
   max-width: 1600px;
   margin-left: auto;
   margin-right: auto;
+}
+
+@media (min-device-pixel-ratio: 2), (-webkit-min-device-pixel-ratio: 2), (min-resolution: 192dpi), (min-resolution: 2dppx) {
+  .hero {
+    background-image: -webkit-gradient(linear, left top, right top, from(rgba(47, 48, 58, 0.4)), to(rgba(47, 48, 58, 0.4))), url(../images/main/hero.jpg);
+    background-image: linear-gradient(to right, rgba(47, 48, 58, 0.4), rgba(47, 48, 58, 0.4)), url(../images/main/hero.jpg);
+  }
 }
 
 .hero__container {
@@ -1814,6 +1819,7 @@ h1, h2, h3, h4, ul, p {
   height: 100vh;
   background-color: #ffffff;
   padding: 48px 40px;
+  overflow: scroll;
   -webkit-transform: translateX(100%);
           transform: translateX(100%);
   -webkit-transition: -webkit-transform 250ms cubic-bezier(0.4, 0, 0.2, 1);
@@ -1872,7 +1878,12 @@ h1, h2, h3, h4, ul, p {
   margin-top: 306px;
 }
 
+.mobile-contacts__item {
+  margin-top: 32px;
+}
+
 .mobile__tel {
+  text-decoration: none;
   font-family: Roboto;
   font-weight: 500;
   font-size: 34px;
@@ -1882,12 +1893,43 @@ h1, h2, h3, h4, ul, p {
 }
 
 .mobile__mail {
+  text-decoration: none;
   font-family: Roboto;
   font-weight: 500;
   font-size: 24px;
   line-height: 28px;
   letter-spacing: 0.02em;
   color: #757575;
-  margin-top: 32px;
+}
+
+.mobile__socials {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  margin-top: 64px;
+}
+
+.mobile__item {
+  border-right: 1px solid rgba(33, 33, 33, 0.2);
+  padding: 0px 10px;
+}
+
+.mobile__item:first-child {
+  padding-left: 0;
+}
+
+.mobile__item:last-child {
+  padding-right: 0;
+  border-right: none;
+}
+
+.mobile__link {
+  text-decoration: none;
+  font-family: Roboto;
+  font-weight: 500;
+  font-size: 18px;
+  line-height: 22px;
+  letter-spacing: 0.02em;
+  color: #2196F3;
 }
 /*# sourceMappingURL=main.css.map */
