--- a/sass/index/_hero.scss
+++ b/sass/index/_hero.scss
@@ -1,10 +1,4 @@
 .hero {
-  background-image: linear-gradient(
-      to right,
-      rgba(47, 48, 58, 0.4),
-      rgba(47, 48, 58, 0.4)
-    ),
-    url(../images/main/hero.jpg);
   background-color: getColor(background-hero);
   background-repeat: no-repeat;
   background-position: center;
@@ -12,6 +6,19 @@
   max-width: 1600px;
   margin-left: auto;
   margin-right: auto;
+}
+
+@media (min-device-pixel-ratio: 2),
+  (min-resolution: 192dpi),
+  (min-resolution: 2dppx) {
+  .hero {
+    background-image: linear-gradient(
+      to right,
+      rgba(47, 48, 58, 0.4),
+      rgba(47, 48, 58, 0.4)
+    ),
+    url(../images/main/hero.jpg);;
+  }
 }
 
 .hero__container {
