--- a/sass/index/_hero.scss
+++ b/sass/index/_hero.scss
@@ -8,7 +8,9 @@
   margin-right: auto;
 }
 
-@media (min-device-pixel-ratio: 2),
+@media 
+  (max-width: 767px),
+  (min-device-pixel-ratio: 2),
   (min-resolution: 192dpi),
   (min-resolution: 2dppx) {
   .hero {
@@ -17,7 +19,35 @@
       rgba(47, 48, 58, 0.4),
       rgba(47, 48, 58, 0.4)
     ),
-    url(../images/main/hero.jpg);;
+    url(../images/main/hero_mobile.jpg);
+  }
+}
+
+@media (max-width: 1199px),
+ (min-device-pixel-ratio: 2),
+  (min-resolution: 192dpi),
+  (min-resolution: 2dppx) {
+  .hero {
+    background-image: linear-gradient(
+      to right,
+      rgba(47, 48, 58, 0.4),
+      rgba(47, 48, 58, 0.4)
+    ),
+    url(../images/main/hero_tablet.jpg);
+  }
+}
+
+  @media (min-device-pixel-ratio: 2),
+  (min-resolution: 192dpi),
+  (min-resolution: 2dppx),
+  (min-width: $desktop) {
+  .hero {
+    background-image: linear-gradient(
+      to right,
+      rgba(47, 48, 58, 0.4),
+      rgba(47, 48, 58, 0.4)
+    ),
+    url(../images/main/hero.jpg);
   }
 }
 
