--- a/sass/index/_mobile-menu.scss
+++ b/sass/index/_mobile-menu.scss
@@ -6,7 +6,7 @@
     height: 100vh;
     background-color: #ffffff;
     padding: 48px 40px;
-    overflow: scroll;
+    overflow-y: scroll;
         
     transform: translateX(100%);
     transition: transform $duration $cubic-bezier;
@@ -14,6 +14,7 @@
 
 .mobile.is-open {
     transform: translateX(0);
+    
 }
 
 .mobile-menu__button {
