--- a/sass/index/_hero.scss
+++ b/sass/index/_hero.scss
@@ -37,10 +37,10 @@
   }
 }
 
-  @media (min-device-pixel-ratio: 2),
+@media (min-width: $desktop),
+  (min-device-pixel-ratio: 2),
   (min-resolution: 192dpi),
-  (min-resolution: 2dppx),
-  (min-width: $desktop) {
+  (min-resolution: 2dppx) {
   .hero {
     background-image: linear-gradient(
       to right,
